--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,25 @@
 /* You can add global styles to this file, and also import other style files */
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; padding: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: #dbe0e5;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #ff4081
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #a32b53;
+}
